common crawl 项目说明

--- a/common_crawl/warc_analyse.ipynb
+++ b/common_crawl/warc_analyse.ipynb
@@ -15,12 +15,8 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.7.3 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "398dc28c06ad810e77de546bbdfa897a6ee0b83e59a5207339dda01a7843e01d"
-    }
-   }
+   "display_name": "Python 3",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -83,29 +79,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'warc'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-4035bc931d97>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mwarc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mccfile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwarc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mWARCFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'example.warc'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'warc'"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "AW Aruba\nAF Afghanistan\nAO Angola\nAI Anguilla\nAX Åland Islands\nAL Albania\nAD Andorra\nAE United Arab Emirates\nAR Argentina\nAM Armenia\nAS American Samoa\nAQ Antarctica\nTF French Southern Territories\nAG Antigua and Barbuda\nAU Australia\nAT Austria\nAZ Azerbaijan\nBI Burundi\nBE Belgium\nBJ Benin\nBQ Bonaire, Sint Eustatius and Saba\nBF Burkina Faso\nBD Bangladesh\nBG Bulgaria\nBH Bahrain\nBS Bahamas\nBA Bosnia and Herzegovina\nBL Saint Barthélemy\nBY Belarus\nBZ Belize\nBM Bermuda\nBO Bolivia, Plurinational State of\nBR Brazil\nBB Barbados\nBN Brunei Darussalam\nBT Bhutan\nBV Bouvet Island\nBW Botswana\nCF Central African Republic\nCA Canada\nCC Cocos (Keeling) Islands\nCH Switzerland\nCL Chile\nCN China\nCI Côte d'Ivoire\nCM Cameroon\nCD Congo, The Democratic Republic of the\nCG Congo\nCK Cook Islands\nCO Colombia\nKM Comoros\nCV Cabo Verde\nCR Costa Rica\nCU Cuba\nCW Curaçao\nCX Christmas Island\nKY Cayman Islands\nCY Cyprus\nCZ Czechia\nDE Germany\nDJ Djibouti\nDM Dominica\nDK Denmark\nDO Dominican Republic\nDZ Algeria\nEC Ecuador\nEG Egypt\nER Eritrea\nEH Western Sahara\nES Spain\nEE Estonia\nET Ethiopia\nFI Finland\nFJ Fiji\nFK Falkland Islands (Malvinas)\nFR France\nFO Faroe Islands\nFM Micronesia, Federated States of\nGA Gabon\nGB United Kingdom\nGE Georgia\nGG Guernsey\nGH Ghana\nGI Gibraltar\nGN Guinea\nGP Guadeloupe\nGM Gambia\nGW Guinea-Bissau\nGQ Equatorial Guinea\nGR Greece\nGD Grenada\nGL Greenland\nGT Guatemala\nGF French Guiana\nGU Guam\nGY Guyana\nHK Hong Kong\nHM Heard Island and McDonald Islands\nHN Honduras\nHR Croatia\nHT Haiti\nHU Hungary\nID Indonesia\nIM Isle of Man\nIN India\nIO British Indian Ocean Territory\nIE Ireland\nIR Iran, Islamic Republic of\nIQ Iraq\nIS Iceland\nIL Israel\nIT Italy\nJM Jamaica\nJE Jersey\nJO Jordan\nJP Japan\nKZ Kazakhstan\nKE Kenya\nKG Kyrgyzstan\nKH Cambodia\nKI Kiribati\nKN Saint Kitts and Nevis\nKR Korea, Republic of\nKW Kuwait\nLA Lao People's Democratic Republic\nLB Lebanon\nLR Liberia\nLY Libya\nLC Saint Lucia\nLI Liechtenstein\nLK Sri Lanka\nLS Lesotho\nLT Lithuania\nLU Luxembourg\nLV Latvia\nMO Macao\nMF Saint Martin (French part)\nMA Morocco\nMC Monaco\nMD Moldova, Republic of\nMG Madagascar\nMV Maldives\nMX Mexico\nMH Marshall Islands\nMK North Macedonia\nML Mali\nMT Malta\nMM Myanmar\nME Montenegro\nMN Mongolia\nMP Northern Mariana Islands\nMZ Mozambique\nMR Mauritania\nMS Montserrat\nMQ Martinique\nMU Mauritius\nMW Malawi\nMY Malaysia\nYT Mayotte\nNA Namibia\nNC New Caledonia\nNE Niger\nNF Norfolk Island\nNG Nigeria\nNI Nicaragua\nNU Niue\nNL Netherlands\nNO Norway\nNP Nepal\nNR Nauru\nNZ New Zealand\nOM Oman\nPK Pakistan\nPA Panama\nPN Pitcairn\nPE Peru\nPH Philippines\nPW Palau\nPG Papua New Guinea\nPL Poland\nPR Puerto Rico\nKP Korea, Democratic People's Republic of\nPT Portugal\nPY Paraguay\nPS Palestine, State of\nPF French Polynesia\nQA Qatar\nRE Réunion\nRO Romania\nRU Russian Federation\nRW Rwanda\nSA Saudi Arabia\nSD Sudan\nSN Senegal\nSG Singapore\nGS South Georgia and the South Sandwich Islands\nSH Saint Helena, Ascension and Tristan da Cunha\nSJ Svalbard and Jan Mayen\nSB Solomon Islands\nSL Sierra Leone\nSV El Salvador\nSM San Marino\nSO Somalia\nPM Saint Pierre and Miquelon\nRS Serbia\nSS South Sudan\nST Sao Tome and Principe\nSR Suriname\nSK Slovakia\nSI Slovenia\nSE Sweden\nSZ Eswatini\nSX Sint Maarten (Dutch part)\nSC Seychelles\nSY Syrian Arab Republic\nTC Turks and Caicos Islands\nTD Chad\nTG Togo\nTH Thailand\nTJ Tajikistan\nTK Tokelau\nTM Turkmenistan\nTL Timor-Leste\nTO Tonga\nTT Trinidad and Tobago\nTN Tunisia\nTR Turkey\nTV Tuvalu\nTW Taiwan, Province of China\nTZ Tanzania, United Republic of\nUG Uganda\nUA Ukraine\nUM United States Minor Outlying Islands\nUY Uruguay\nUS United States\nUZ Uzbekistan\nVA Holy See (Vatican City State)\nVC Saint Vincent and the Grenadines\nVE Venezuela, Bolivarian Republic of\nVG Virgin Islands, British\nVI Virgin Islands, U.S.\nVN Viet Nam\nVU Vanuatu\nWF Wallis and Futuna\nWS Samoa\nYE Yemen\nZA South Africa\nZM Zambia\nZW Zimbabwe\n"
      ]
     }
    ],
    "source": [
+    "import pycountry\n",
     "\n",
-    "import warc \n",
+    "# print(len(pycountry.countries))\n",
     "\n",
-    "ccfile = warc.WARCFile('example.warc')\n",
-    "\n",
-    "for i,record in enumerate(ccfile):\n",
-    "    print(record)"
+    "country_dict = dict()\n",
+    "for country in pycountry.countries:\n",
+    "    print(country.alpha_2,country.name)\n"
    ]
   },
   {
