--- a/common_crawl/warc_analyse.ipynb
+++ b/common_crawl/warc_analyse.ipynb
@@ -14,9 +14,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python373jvsc74a57bd0398dc28c06ad810e77de546bbdfa897a6ee0b83e59a5207339dda01a7843e01d",
-   "display_name": "Python 3.7.3 64-bit ('anaconda3': virtualenv)",
-   "language": "python"
+   "name": "python3",
+   "display_name": "Python 3.7.3 64-bit ('anaconda3': virtualenv)"
   },
   "interpreter": {
    "hash": "398dc28c06ad810e77de546bbdfa897a6ee0b83e59a5207339dda01a7843e01d"
@@ -210,11 +209,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {
-    "tags": [
-     "outputPrepend"
-    ]
+    "tags": []
    },
    "outputs": [
     {
