--- a/common_crawl/notebook/RQ3.ipynb
+++ b/common_crawl/notebook/RQ3.ipynb
@@ -3,6 +3,17 @@
         {
             "cell_type": "code",
             "execution_count": 1,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "/Users/zhansu/anaconda3/lib/python3.7/site-packages/pandas/compat/_optional.py:138: UserWarning: Pandas requires version '2.7.0' or newer of 'numexpr' (version '2.6.9' currently installed).\n",
+                        "  warnings.warn(msg, UserWarning)\n"
+                    ]
+                }
+            ],
             "source": [
                 "import pandas as pd \n",
                 "\n",
@@ -21,22 +32,26 @@
                 "\n",
                 "frame_202105 = frame_construct(\"202105\")\n",
                 "frame_202105['tracker_list'] = frame_202105.trackers.str.split(',')\n"
-            ],
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stderr",
-                    "text": [
-                        "/Users/zhansu/anaconda3/lib/python3.7/site-packages/pandas/compat/_optional.py:138: UserWarning: Pandas requires version '2.7.0' or newer of 'numexpr' (version '2.6.9' currently installed).\n",
-                        "  warnings.warn(msg, UserWarning)\n"
-                    ]
-                }
-            ],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": 2,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "               domain registration_country   category\n",
+                        "0  123contactform.com                   RO     Widget\n",
+                        "1             2o7.net                   US  Analytics\n",
+                        "2           4stats.de                    #     Beacon\n",
+                        "3               4u.pl                    #  Analytics\n",
+                        "4               51.la                   CN  Analytics\n"
+                    ]
+                }
+            ],
             "source": [
                 "# 第三库标识\n",
                 "\n",
@@ -96,35 +111,55 @@
                 "\n",
                 "    return glocality_index_cal(frame)\n",
                 "\n"
-            ],
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": [
-                        "               domain registration_country   category\n",
-                        "0  123contactform.com                   RO     Widget\n",
-                        "1             2o7.net                   US  Analytics\n",
-                        "2           4stats.de                    #     Beacon\n",
-                        "3               4u.pl                    #  Analytics\n",
-                        "4               51.la                   CN  Analytics\n"
-                    ]
-                }
-            ],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "markdown",
+            "metadata": {},
             "source": [
                 "## 获得每个国家的domain list\n",
                 "\n",
                 "获得国家的domain list之后我们重新计算每个国家的glocality"
-            ],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": 3,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "/Users/zhansu/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:3607: SettingWithCopyWarning: \n",
+                        "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+                        "Try using .loc[row_indexer,col_indexer] = value instead\n",
+                        "\n",
+                        "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+                        "  self._set_item(key, value)\n"
+                    ]
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "   alpha_2  glocality\n",
+                        "14      RW   0.073052\n",
+                        "85      BR   0.072118\n",
+                        "84      BS   0.065000\n",
+                        "3       KR   0.064534\n",
+                        "78      ZW   0.062742\n",
+                        "..     ...        ...\n",
+                        "82      NP   0.029388\n",
+                        "93      KZ   0.024174\n",
+                        "9       GR   0.023896\n",
+                        "26      RU   0.022735\n",
+                        "51      BY   0.022433\n",
+                        "\n",
+                        "[116 rows x 2 columns]\n"
+                    ]
+                }
+            ],
             "source": [
                 "filename = glob.glob(\"/Users/zhansu/program/code/phd_privacy_lost/webXray/page_lists/*.txt\")\n",
                 "\n",
@@ -144,46 +179,26 @@
                 "df_glocality.columns = ['alpha_2',\"glocality\"]\n",
                 "print(df_glocality.sort_values(by = ['glocality'],ascending =False))\n",
                 "    # print(web_list)"
-            ],
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stderr",
-                    "text": [
-                        "/Users/zhansu/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:3607: SettingWithCopyWarning: \n",
-                        "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-                        "Try using .loc[row_indexer,col_indexer] = value instead\n",
-                        "\n",
-                        "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-                        "  self._set_item(key, value)\n"
-                    ]
-                },
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": [
-                        "   alpha_2  glocality\n",
-                        "14      RW   0.073052\n",
-                        "85      BR   0.072118\n",
-                        "84      BS   0.065000\n",
-                        "3       KR   0.064534\n",
-                        "78      ZW   0.062742\n",
-                        "..     ...        ...\n",
-                        "82      NP   0.029388\n",
-                        "93      KZ   0.024174\n",
-                        "9       GR   0.023896\n",
-                        "26      RU   0.022735\n",
-                        "51      BY   0.022433\n",
-                        "\n",
-                        "[116 rows x 2 columns]\n"
-                    ]
-                }
-            ],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": 4,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "   alpha_2  glocality alpha_3                name\n",
+                        "14      RW   0.073052     RWA              Rwanda\n",
+                        "85      BR   0.072118     BRA              Brazil\n",
+                        "84      BS   0.065000     BHS             Bahamas\n",
+                        "3       KR   0.064534     KOR  Korea, Republic of\n",
+                        "78      ZW   0.062742     ZWE            Zimbabwe\n"
+                    ]
+                }
+            ],
             "source": [
                 "import pycountry\n",
                 "\n",
@@ -203,53 +218,27 @@
                 "df_glocality = df_glocality.sort_values(by = ['glocality'],ascending=False)\n",
                 "print(df_glocality.head())\n",
                 "df_glocality.to_csv(\"glocality_country.csv\",index = None)\n"
-            ],
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": [
-                        "   alpha_2  glocality alpha_3                name\n",
-                        "14      RW   0.073052     RWA              Rwanda\n",
-                        "85      BR   0.072118     BRA              Brazil\n",
-                        "84      BS   0.065000     BHS             Bahamas\n",
-                        "3       KR   0.064534     KOR  Korea, Republic of\n",
-                        "78      ZW   0.062742     ZWE            Zimbabwe\n"
-                    ]
-                }
-            ],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": 5,
+            "metadata": {},
+            "outputs": [],
             "source": [
                 "import pandas as pd\n",
                 "df_iii = pd.read_csv(\"iii_world.csv\")\n",
                 "\n",
                 "df_merge = df_iii.merge(df_glocality, how = \"inner\", on  = \"alpha_2\")\n",
                 "df_merge.to_csv(\"glocality_country_merge.csv\",index=None)"
-            ],
-            "outputs": [],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": 8,
-            "source": [
-                "import plotly.express as px\n",
-                "\n",
-                "fig = px.line(x = df_merge['rank'],y = df_merge['score'])\n",
-                "\n",
-                "fig.show()\n",
-                "\n",
-                "fig_2 = px.line(x = df_merge['rank'],y = df_merge['glocality'])\n",
-                "\n",
-                "fig_2.show()"
-            ],
+            "metadata": {},
             "outputs": [
                 {
-                    "output_type": "display_data",
                     "data": {
                         "application/vnd.plotly.v1+json": {
                             "config": {
@@ -1298,10 +1287,10 @@
                             }
                         }
                     },
-                    "metadata": {}
+                    "metadata": {},
+                    "output_type": "display_data"
                 },
                 {
-                    "output_type": "display_data",
                     "data": {
                         "application/vnd.plotly.v1+json": {
                             "config": {
@@ -2350,14 +2339,40 @@
                             }
                         }
                     },
-                    "metadata": {}
+                    "metadata": {},
+                    "output_type": "display_data"
                 }
             ],
-            "metadata": {}
+            "source": [
+                "import plotly.express as px\n",
+                "\n",
+                "fig = px.line(x = df_merge['rank'],y = df_merge['score'])\n",
+                "\n",
+                "fig.show()\n",
+                "\n",
+                "fig_2 = px.line(x = df_merge['rank'],y = df_merge['glocality'])\n",
+                "\n",
+                "fig_2.show()"
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": 20,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "                start_url                                                  0\n",
+                        "0         http://1337x.to                                              [nan]\n",
+                        "1       http://22pixx.xyz                                              [nan]\n",
+                        "2  http://3byggetilbud.dk  [cloudflare.com, 3bt.dk, trustpilot.com, cooki...\n",
+                        "3            http://3f.dk  [responsivevoice.org, 3f-design.dk, cookiebot....\n",
+                        "4        http://4chan.org        [google-analytics.com, adtng.com, 4cdn.org]\n"
+                    ]
+                }
+            ],
             "source": [
                 "# 对common crawl 和 webxray的数据进行比较\n",
                 "import pandas as pd \n",
@@ -2370,47 +2385,25 @@
                 "print(df_webxray_group.head())\n",
                 "\n",
                 "df_webxray_group.to_csv(\"dk_webxray_group.csv\",index = None)"
-            ],
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": [
-                        "                start_url                                                  0\n",
-                        "0         http://1337x.to                                              [nan]\n",
-                        "1       http://22pixx.xyz                                              [nan]\n",
-                        "2  http://3byggetilbud.dk  [cloudflare.com, 3bt.dk, trustpilot.com, cooki...\n",
-                        "3            http://3f.dk  [responsivevoice.org, 3f-design.dk, cookiebot....\n",
-                        "4        http://4chan.org        [google-analytics.com, adtng.com, 4cdn.org]\n"
-                    ]
-                }
-            ],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": 24,
+            "metadata": {},
+            "outputs": [],
             "source": [
                 "df_commoncrawl = pd.read_csv(\"dk_domain_trackers_from_commoncrawl.csv\")\n",
                 "\n",
                 "df_commoncrawl.sort_values(by = \"url\").to_csv(\"dk_domain_trackers_from_commoncrawl_sort.csv\",index = None)"
-            ],
-            "outputs": [],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": 30,
-            "source": [
-                "# 按照国家来分析trackers\n",
-                "\n",
-                "import pandas as pd \n",
-                "df_domain_third_party = pd.read_csv(\"labeled-thirdparties.csv\",sep = '\\t', names = ['domain','registration_org','registration_country','num_embeddings','num_embeddings_javascript','num_embeddings_iframe','num_embeddings_image','num_embeddings_link','category','company'])\n",
-                "df_domain_third_party.groupby(\"registration_country\").count().reset_index().sort_values(by = \"domain\",ascending = False)"
-            ],
+            "metadata": {},
             "outputs": [
                 {
-                    "output_type": "execute_result",
                     "data": {
                         "text/html": [
                             "<div>\n",
@@ -3336,40 +3329,50 @@
                             "37                     1                    1         1        1  "
                         ]
                     },
+                    "execution_count": 30,
                     "metadata": {},
-                    "execution_count": 30
+                    "output_type": "execute_result"
                 }
             ],
-            "metadata": {}
+            "source": [
+                "# 按照国家来分析trackers\n",
+                "\n",
+                "import pandas as pd \n",
+                "df_domain_third_party = pd.read_csv(\"labeled-thirdparties.csv\",sep = '\\t', names = ['domain','registration_org','registration_country','num_embeddings','num_embeddings_javascript','num_embeddings_iframe','num_embeddings_image','num_embeddings_link','category','company'])\n",
+                "df_domain_third_party.groupby(\"registration_country\").count().reset_index().sort_values(by = \"domain\",ascending = False)"
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
-            "source": [],
+            "metadata": {},
             "outputs": [],
-            "metadata": {}
+            "source": []
         }
     ],
     "metadata": {
-        "orig_nbformat": 4,
+        "kernelspec": {
+            "display_name": "ICLR",
+            "language": "python",
+            "name": "python3"
+        },
         "language_info": {
-            "name": "python",
-            "version": "3.7.3",
-            "mimetype": "text/x-python",
             "codemirror_mode": {
                 "name": "ipython",
                 "version": 3
             },
-            "pygments_lexer": "ipython3",
+            "file_extension": ".py",
+            "mimetype": "text/x-python",
+            "name": "python",
             "nbconvert_exporter": "python",
-            "file_extension": ".py"
+            "pygments_lexer": "ipython3",
+            "version": "3.8.13 (default, Mar 28 2022, 11:38:47) \n[GCC 7.5.0]"
         },
-        "kernelspec": {
-            "name": "python3",
-            "display_name": "Python 3.7.3 64-bit ('base': conda)"
-        },
-        "interpreter": {
-            "hash": "d3241af192ca6bbb2a07d95a604a33d4ce752c1755b28e9e828d9c6d67377320"
+        "orig_nbformat": 4,
+        "vscode": {
+            "interpreter": {
+                "hash": "3a4641dabb502a09a6d8f2aaa091f42fb383761f2a90c85265180664c4c2386f"
+            }
         }
     },
     "nbformat": 4,
