--- a/common_crawl/notebook/edu_trackers_changes.ipynb
+++ b/common_crawl/notebook/edu_trackers_changes.ipynb
@@ -5599,11 +5599,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "d3241af192ca6bbb2a07d95a604a33d4ce752c1755b28e9e828d9c6d67377320"
-  },
   "kernelspec": {
-   "display_name": "Python 3.7.3 64-bit ('base': conda)",
+   "display_name": "base",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -5616,9 +5614,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.5 (default, Jun  4 2021, 12:28:51) \n[GCC 7.5.0]"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "d8ed0073c41b023cdd22b6268c6b3f0c9b6d97a6234cf243afa672a36c79f6c6"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
